// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PressableTests Pressables can change text on press/rest, state rest 1`] = `
{
  "AutomationId": "pressable_press_console",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 21,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "",
  "Top": 21,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 656,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`PressableTests Pressables can have customized borders and corners 1`] = `
{
  "AutomationId": "advanced_borders_pressable",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 50,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 50,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#FF808080",
          "BorderBrush": "#FF0000FF",
          "BorderThickness": "10,20,15,5",
          "Clip": null,
          "CornerRadius": "3,2,1,4",
          "FlowDirection": "LeftToRight",
          "Height": 50,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 50,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have delayed event handlers 1`] = `
{
  "AutomationId": "pressable_delay_events_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 331,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 56,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "8,8,8,8",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 56,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF007AFF",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Press Me",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 56,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have event handlers 1`] = `
{
  "AccessibilityRole": "Button",
  "AutomationId": "pressable_feedback_events_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 331,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 56,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "8,8,8,8",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 56,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF007AFF",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Press Me",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 56,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have hit slop functionality 1`] = `
{
  "AutomationId": "pressable_hit_slop_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 286,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 30,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 146,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#FFFF0000",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 146,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Press Outside This View",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 146,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have ranging opacity 1`] = `
{
  "AutomationId": "opacity_pressable",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 550,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 550,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 50,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 100,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 150,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 200,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 250,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 300,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 350,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 400,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 450,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 500,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#FF000000",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 50,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have their accessibility and keyboard focus removed 1`] = `
{
  "AutomationId": "accessible_pressable",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 180,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 180,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 718,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Pressable with accessible=true and focusable=true",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 718,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 50,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 50,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 718,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Pressable with accessible=false",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 718,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 100,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Pressable with focusable=false",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 30,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 150,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Pressable with accessible=false and focusable=false",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have tooltips 1`] = `
{
  "AutomationId": "tooltip_pressable",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Tooltip": "Pressable",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "2,2,2,2",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Pressable with ToolTip "Pressable"",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can hide their backface 1`] = `
{
  "AutomationId": "backface_pressable",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 468,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 468,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 29,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,10",
              "Text": "View #1, front is visible, back is hidden.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 200,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 29,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 200,
                  "HorizontalAlignment": "Stretch",
                  "Left": 259,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 200,
                  "XamlType": "Microsoft.ReactNative.ViewControl",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                      "children": [
                        {
                          "Background": "#FF0000FF",
                          "BorderBrush": "#E4000000",
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Height": 200,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 200,
                          "XamlType": "Microsoft.ReactNative.ViewPanel",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "Height": 19,
                              "HorizontalAlignment": "Stretch",
                              "Left": 83,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Text": "Front",
                              "Top": 90,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "Width": 33,
                              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 200,
                  "HorizontalAlignment": "Stretch",
                  "Left": 259,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 200,
                  "XamlType": "Microsoft.ReactNative.ViewControl",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                      "children": [
                        {
                          "Background": "#FFFF0000",
                          "BorderBrush": "#E4000000",
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Height": 200,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 200,
                          "XamlType": "Microsoft.ReactNative.ViewPanel",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "Height": 19,
                              "HorizontalAlignment": "Stretch",
                              "Left": 8,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Text": "Back (You should not see this)",
                              "Top": 90,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "Width": 184,
                              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 39,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,10,0,10",
              "Text": "View #2, front is hidden, back is visible.",
              "Top": 229,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 200,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 268,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 200,
                  "HorizontalAlignment": "Stretch",
                  "Left": 259,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 200,
                  "XamlType": "Microsoft.ReactNative.ViewControl",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                      "children": [
                        {
                          "Background": "#FF0000FF",
                          "BorderBrush": "#E4000000",
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Height": 200,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 200,
                          "XamlType": "Microsoft.ReactNative.ViewPanel",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "Height": 19,
                              "HorizontalAlignment": "Stretch",
                              "Left": 6,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Text": "Front (You should not see this)",
                              "Top": 90,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "Width": 188,
                              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 200,
                  "HorizontalAlignment": "Stretch",
                  "Left": 259,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 200,
                  "XamlType": "Microsoft.ReactNative.ViewControl",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                      "children": [
                        {
                          "Background": "#FFFF0000",
                          "BorderBrush": "#E4000000",
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Height": 200,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 200,
                          "XamlType": "Microsoft.ReactNative.ViewPanel",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "Height": 19,
                              "HorizontalAlignment": "Stretch",
                              "Left": 85,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Text": "Back",
                              "Top": 90,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "Width": 29,
                              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can hide their children from accessibility focus 1`] = `
{
  "AutomationId": "no_hide_pressable",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Parent Pressable",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 19,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 718,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Child Pressable",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 718,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
